See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.46.00

              xwdtopnm: Add warning about 2 byte sample output.
         
              pnmcut: finally make it just an alias of pamcut, which
              obsoleted it in 9.20.

              picttoppm: Fix crash with -fullres and all-text PICT image.
              Also issue warning that program omits text with -fullres.

              picttoppm: Improve error/informational messages.

              picttoppm: Don't fail if 'fontdir' file doesn't exist.  Bug
              from 10.44.

              ppmtopict: Use two-byte length field when image width > 200
              instead of > 250.  Former is what Picttoppm has been assuming
              since March 2004, when it was found to work better than 250,
              which is the number documented as right.

              ilbmtoppm: fix bug: appends color map PPM to output if input
              has color map; fails if input doesn't have color map.  Broken
              in 10.18.

              leaftoppm: fix bug: uses red channel as all three channels;
              (produces grayscale output).  Broken between 10.19 and 10.26,
              inclusive.

              pbmtomrf, mrftopbm: fix crashes, incorrect output in all
              cases.  Broken forever.

              pamcut: fix bug with PBM and -pad.

08.12.28 BJH  Release 10.45.00

              pgmnoise: Add -randomseed.

              ppmtobmp: Add -mapfile option.

              pnm_createBlackTuple(): Fix array bounds violation with
              PBM, PGM.

              pnmtoddif: Fix crash with any PGM input.

              pgmnoise: Fix bug: never generates full white pixel.

              pamditherbw: Fix -value other than .5 with -fs, -atkinson.

              Configure: fix crash when Libxml2 is installed, but not new
              enough version.
