@@ -43,6 +43,7 @@
 #include "mallocvar.h"
 #include "shhopt.h"
 #include "pnm.h"
+#include "pm_config.h"
 
 
 
@@ -155,6 +156,20 @@ struct FITS_Header {
 };
 
 
+static void
+swapbytes(void *       const p,
+          unsigned int const nbytes) {
+#if BYTE_ORDER == LITTLE_ENDIAN
+    unsigned char * const c = p;
+    unsigned int i;
+    for (i = 0; i < nbytes/2; ++i) {
+        unsigned char const orig = c[i];
+        c[i] = c[nbytes-(i+1)];
+        c[nbytes-(i+1)] = orig;
+    }
+#endif
+}
+
 
 /*
  ** This code will deal properly with integers, no matter what the byte order
@@ -227,6 +242,7 @@ readVal(FILE *   const ifP,
                 pm_error("EOF / read error");
             c[i] = ich;
         }
+        swapbytes(c, 4);
         *vP = *((float *)c);
     } break;
       
@@ -240,6 +256,7 @@ readVal(FILE *   const ifP,
                 pm_error("EOF / read error");
             c[i] = ich;
         }
+        swapbytes(c, 8);
         *vP = *((double *)c);
     } break;
       
